# pyTuneTag

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
src/: cli.py  pytunetag.py
src/pytunetag/: __init__.py  cli.py  pytunetag.py
src/pytunetag/mtrpp/: train.py  train_distributed.py
src/pytunetag/mtrpp/datasets/: audioset.py  dataloader.py  dimsim.py  fma.py  msd.py  music4all.py  music_caps.py  olga.py  song_describer.py
src/pytunetag/mtrpp/evaluation/: eval_dimsim.py  eval_olga.py  eval_semantic.py
src/pytunetag/mtrpp/inference/: infer_audio.py  infer_msd.py
src/pytunetag/mtrpp/model/: dual_encoder.py
src/pytunetag/mtrpp/modules/: ast.py  resnet.py
src/pytunetag/mtrpp/transfer/: eval_probing.py  eval_zs.py  extractor.py  train_probing.py
src/pytunetag/mtrpp/transfer/dataset_embs/: data_manger.py
src/pytunetag/mtrpp/transfer/dataset_wavs/: data_manger.py  emotify.py  fma.py  gtzan.py  kvt.py  mtat.py  mtg.py
src/pytunetag/mtrpp/utils/: eval_utils.py
