[project]
name = "pytunetag"
version = "0.1.0"
description = "A Python library to automatically detect and modify music genres for mp3 files."
requires-python = ">=3.12"

dependencies = [
    "torch",
    "numpy",
    "pydub",
    "mutagen",
    "pandas",
    "scikit-learn",
    "omegaconf",
    "librosa",
    "torchaudio",
    "transformers",
]

[project.scripts]
pytunetag = "pytunetag.src.cli:cli"